--- a/package.json
+++ b/package.json
@@ -1,30 +1,70 @@
 {
+  
   "name": "lap-backend-api",
+  
   "version": "1.0.0",
+  
   "description": "",
+  
   "main": "index.js",
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  
+    
+  "start": "nodemon server.js",
+  
+    
+  "test": "echo \"Error: no test specified\" && exit 1"
+  
   },
+  
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/elakkiya-2005/LAP-BACKEND-API.git"
+  
+    
+  "type": "git",
+  
+    
+  "url": "git+https://github.com/elakkiya-2005/LAP-BACKEND-API.git"
+  
   },
+  
   "keywords": [],
+  
   "author": "",
+  
   "license": "ISC",
+  
   "type": "commonjs",
+  
   "bugs": {
-    "url": "https://github.com/elakkiya-2005/LAP-BACKEND-API/issues"
+  
+    
+  "url": "https://github.com/elakkiya-2005/LAP-BACKEND-API/issues"
+  
   },
+  
   "homepage": "https://github.com/elakkiya-2005/LAP-BACKEND-API#readme",
+  
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "mongoose": "^8.17.1"
+  
+    
+  "body-parser": "^2.2.0",
+  
+    
+  "cors": "^2.8.5",
+  
+    
+  "express": "^5.1.0",
+  
+    
+  "mongoose": "^8.17.2"
+  
   },
+  
   "devDependencies": {
-    "nodemon": "^3.1.10"
+  
+    
+  "nodemon": "^3.1.10"
+  
   }
 }
